--- a/_includes/about.html
+++ b/_includes/about.html
@@ -3,21 +3,71 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2>About</h2>
+                    <h2>講座概要</h2>
                     <hr class="star-light">
                 </div>
             </div>
             <div class="row">
                 <div class="col-lg-4 col-lg-offset-2">
-                    <p>Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS, and JavaScript as well as optional LESS stylesheets for easy customization.</p>
+                    <p>
+                        <h4>
+                            場所と地図
+                        </h4>
+                        東風コミュニティセンター (旧東風公民館)
+                        <br>
+                        糸島市潤四丁目10番2号
+                        <ul>
+                            <li>
+                                受講料：全6回分 1,000円
+                                <br>
+                                (10/7の一般公開講座のみの参加は無料)
+                            </li>
+                            <li>
+                                定員：20名
+                                <br>
+                                (定員オーバーの場合は締切後、参加希望理由等により選考を行います)
+                            </li>
+                            <li>
+                                託児費用：無料（8人程度、要予約）
+                                <br>
+                                ※第１回の公開講座でも託児は受け付けますが、全６回参加の方を優先します
+                            </li>
+                        </ul>
+                    </p>
                 </div>
                 <div class="col-lg-4">
-                    <p>Whether you're a student looking to showcase your work, a professional looking to attract clients, or a graphic artist looking to share your projects, this template is the perfect starting point! </p>
+                    <p>
+                        <h4>
+                            日程
+                        </h4>
+                        <ul>
+                            <li>2020年10月7日 (水)</li>
+                            <li>2020年10月14日 (水)</li>
+                            <li>2020年10月21日 (水)</li>
+                            <li>2020年11月4日 (水)</li>
+                            <li>2020年11月11日 (水)</li>
+                            <li>2021年1月20日 (水)</li>
+                            <li>各回 10:00〜12:00</li>
+                        </ul>
+                    </p>
+                    <p>
+                        <img class="img-responsive" src="img/map.png" alt="アクセス 地図" />
+                    </p>
                 </div>
-                <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <a href="https://github.com/jeromelachaud/freelancer-theme" class="btn btn-lg btn-outline">
-                        <i class="fa fa-download"></i> Download Theme
-                    </a>
+            </div>
+            <div class="row">
+                <div class="col-lg-8 col-lg-offset-2">
+                    <ul class="no-bullets">
+                        <li>
+                            主催：糸島ママライターズ「ともなうプロジェクト」実行委員会
+                        </li>
+                        <li>
+                            共催：糸島市
+                        </li>
+                        <li>
+                            令和2年度 糸島市市民提案型まちづくり事業採択事業
+                        </li>
+                    </ul>
                 </div>
             </div>
         </div>
