Better spacing and text size

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -13,9 +13,11 @@
                         <h4>
                             場所と地図
                         </h4>
-                        東風コミュニティセンター (旧東風公民館)
-                        <br>
-                        糸島市潤四丁目10番2号
+                        <p>
+                            東風コミュニティセンター (旧東風公民館)
+                            <br>
+                            糸島市潤四丁目10番2号
+                        </p>
                         <ul>
                             <li>
                                 受講料：全6回分 1,000円
@@ -50,6 +52,7 @@
                             <li>各回 10:00〜12:00</li>
                         </ul>
                     </p>
+                    <br>
                     <p>
                         <img class="img-responsive" src="img/map.png" alt="アクセス 地図" />
                     </p>
@@ -57,6 +60,7 @@
             </div>
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2">
+                    <hr class="star-light">
                     <ul class="no-bullets">
                         <li>
                             主催：糸島ママライターズ「ともなうプロジェクト」実行委員会
