Reorganised course information

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -9,52 +9,54 @@
             </div>
             <div class="row">
                 <div class="col-lg-4 col-lg-offset-2">
+                    <h4>
+                        日程
+                    </h4>
+                    <ul>
+                        <li>2020年10月7日 (水)</li>
+                        <li>2020年10月14日 (水)</li>
+                        <li>2020年10月21日 (水)</li>
+                        <li>2020年11月4日 (水)</li>
+                        <li>2020年11月11日 (水)</li>
+                        <li>2021年1月20日 (水)</li>
+                        <li>各回 10:00〜12:00</li>
+                    </ul>
+                    <h4>
+                        場所と地図
+                    </h4>
                     <p>
-                        <h4>
-                            場所と地図
-                        </h4>
-                        <p>
-                            東風コミュニティセンター (旧東風公民館)
-                            <br>
-                            糸島市潤四丁目10番2号
-                        </p>
-                        <ul>
-                            <li>
-                                受講料：全6回分 1,000円
-                                <br>
-                                (10/7の一般公開講座のみの参加は無料)
-                            </li>
-                            <li>
-                                定員：20名
-                                <br>
-                                (定員オーバーの場合は締切後、参加希望理由等により選考を行います)
-                            </li>
-                            <li>
-                                託児費用：無料（8人程度、要予約）
-                                <br>
-                                ※第１回の公開講座でも託児は受け付けますが、全６回参加の方を優先します
-                            </li>
-                        </ul>
+                        東風コミュニティセンター (旧東風公民館)
+                        <br>
+                        糸島市潤四丁目10番2号
+                    </p>
+                    <p>
+                        <img class="img-responsive" src="img/map.png" alt="アクセス 地図" />
                     </p>
                 </div>
                 <div class="col-lg-4">
+                    <h4>
+                        受講料
+                    </h4>
                     <p>
-                        <h4>
-                            日程
-                        </h4>
-                        <ul>
-                            <li>2020年10月7日 (水)</li>
-                            <li>2020年10月14日 (水)</li>
-                            <li>2020年10月21日 (水)</li>
-                            <li>2020年11月4日 (水)</li>
-                            <li>2020年11月11日 (水)</li>
-                            <li>2021年1月20日 (水)</li>
-                            <li>各回 10:00〜12:00</li>
-                        </ul>
+                        全6回分 1,000円
+                        <br>
+                        (10/7の一般公開講座のみの参加は無料)
                     </p>
-                    <br>
+                    <h4>
+                        定員
+                    </h4>
                     <p>
-                        <img class="img-responsive" src="img/map.png" alt="アクセス 地図" />
+                        20名
+                        <br>
+                        (定員オーバーの場合は締切後、参加希望理由等により選考を行います)
+                    </p>
+                    <h4>
+                        託児費用
+                    </h4>
+                    <p>
+                        無料（8人程度、要予約）
+                        <br>
+                        ※第１回の公開講座でも託児は受け付けますが、全６回参加の方を優先します
                     </p>
                 </div>
             </div>
@@ -63,10 +65,10 @@
                     <hr class="star-light">
                     <ul class="no-bullets">
                         <li>
-                            主催：糸島ママライターズ「ともなうプロジェクト」実行委員会
+                            主催: 糸島ママライターズ「ともなうプロジェクト」実行委員会
                         </li>
                         <li>
-                            共催：糸島市
+                            共催: 糸島市
                         </li>
                         <li>
                             令和2年度 糸島市市民提案型まちづくり事業採択事業
