Green flag from logo extracted to separate image for mobile

--- a/_includes/css/main.css
+++ b/_includes/css/main.css
@@ -548,3 +548,8 @@ img.speaker-img {
     color: #fff;
     font-weight: bold;
 }
+@media(min-width:768px) {
+    .mobile-only {
+        display:none;
+    }
+}
