--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,12 +3,17 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-12">
-        <img class="img-responsive" src="img/logo-big.jpg" alt="{{ site.title }} ロゴ" />
-        <div class="intro-text">
-          <!-- <span class="name">{{ site.title }}</span> -->
-          <!-- <hr class="star-light" /> -->
-          <span class="skills">{{ site.skills }}</span>
-        </div>
+        <p>
+          <img class="img-responsive" src="img/logo-big.jpg" alt="{{ site.title }} ロゴ" />
+          <div class="intro-text">
+            <span class="skills">{{ site.skills }}</span>
+          </div>
+        </p>
+      </div>
+      <div class="col-lg-12 mobile-only">
+        <p>
+          <img class="img-responsive" src="img/green-flag.png" alt="こんな方におすすめ！近所に外国人が住んでいる方、地域の役に立ちたいと思っている方、何かしたいと思っている方、チラシに気になる言葉があった方" />
+        </p>
       </div>
     </div>
   </div>
