--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -13,13 +13,20 @@
                     </div>
                     <div class="footer-col col-md-4">
                         <h3>{{ site.footer.social }}</h3>
-                        <ul class="list-inline">
-                            {% for network in site.social %}
-                            <li>
-                                <a href="{{ network.url }}" class="btn-social btn-outline"><i class="fa fa-fw fa-{{ network.title }}"></i></a>
-                            </li>
-		                    {% endfor %}
-                        </ul>
+                        <div class="footer-link-list">
+                            <ul class="no-bullets">
+                                {% for network in site.social %}
+                                <li>
+                                    <a href="{{ network.url }}" class="btn-social btn-outline">
+                                        <i class="fa fa-fw fa-{{ network.title }}"></i>
+                                    </a>
+                                    <a href="{{ network.url }}">
+                                        {{ network.link-text }}
+                                    </a>
+                                </li>
+    		                    {% endfor %}
+                            </ul>
+                        </div>
                     </div>
                     <div class="footer-col col-md-4">
                         <h3>{{ site.footer.credits }}</h3>
