Added textual guidance that the images are actually clickable

--- a/_includes/portfolio_grid.html
+++ b/_includes/portfolio_grid.html
@@ -6,6 +6,9 @@
                 <div class="col-lg-12 text-center">
                     <h2>各回詳細</h2>
                     <hr class="star-primary">
+                    <p>
+                        各回をクリックすると講師紹介などの詳細がご覧になれます。
+                    </p>
                 </div>
             </div>
             <div class="portfolio-flex-row">
