Moved the application deadline forward

--- a/_includes/apply.html
+++ b/_includes/apply.html
@@ -13,7 +13,9 @@
                         一般公開講座(10/7)の方もこちらからどうぞ
                     </p>
                     <p>
-                        申込締切: 2020年9月18日(金)
+                        申込締切: 2020年9月27日(日)
+                        <br>
+                        ※締切を延長しました
                     </p>
                     <p>
                         <a href="https://bit.ly/TomoApp" class="btn btn-lg btn-outline">
